# SilverTech

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  environment.yml
apps/api/: openapi.yaml  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/scripts/: eval_guidance.py  eval_stt.py
apps/api/tests/: conftest.py  test_admin_submission_reads.py  test_admin_token.py  test_boundary_cases.py  test_db_pragmas.py  test_instruction_sanitizer.py  test_invalid_button_id_handling.py  test_llm_validation.py  test_migrations.py  test_openrouter_adapter.py  test_openrouter_llm_service.py  test_panasonic_demo_guidance.py  test_promoted_template_is_detectable.py  test_promotion.py  test_promotion_image_copy.py  test_promotion_validation.py  test_query_error_status.py  test_query_flow.py  test_query_tts_response.py  test_review_service.py  test_schema_models.py  test_seed_skips_pipeline_artifacts.py  test_seed_skips_unlabeled_buttons.py  test_submission_review_status.py  test_tts_service.py  test_vision_match.py  test_vision_tools_path.py
apps/data-collector/: .env.example  README.md  pyproject.toml
apps/data-collector/scripts/: 01_generate_queries.py  02_crawl_candidates.py  03_download_images.py  04_process_images.py  build_gallery.py
apps/data-collector/src/: config.py  models.py  seeds.py
apps/data-collector/tests/: test_brand.py  test_downloader.py  test_extractors.py  test_gallery.py  test_seeds.py  test_validator.py
apps/vision-tools/: pyproject.toml
apps/vision-tools/scripts/: __init__.py  brand_gallery.py  build_descriptors.py  compare_orb_sift.py  compute_logo_offsets.py  confidence.py  estimate_transform.py  eval_logo_anchor.py  extract_orb_features.py  load_inputs.py  logo_anchor.py  logo_anchor_match.py  match_descriptors.py  match_images.py  offline_match.py  project_buttons.py  run_logo_anchor.py  visualize_projection.py
apps/vision-tools/tests/: test_build_descriptors.py  test_confidence.py  test_failure_cases.py  test_hamming_matcher.py  test_label_qc.py  (+11 more)
(+223 files in other folders)
