[project]
name = "silvertech-data-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44",
  "httpx>=0.27",
  "rapidocr-onnxruntime>=1.3",
  "pillow>=10.0",
  "imagehash>=4.3",
  "jinja2>=3.1",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
